Hay que corregir tests de presentación (cambios de la lógica de viewmodel+reducer) y de domain (TestEngine with ID 'junit-jupiter' failed to discover tests)